Closed Bug 17405 Opened 26 years ago Closed 26 years ago

[DOGFOOD] Autocomplete against a name with no e-mail address leads to a crash

Categories

(SeaMonkey :: MailNews: Address Book & Contacts, defect, P3)

x86
Windows NT
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: marina, Assigned: bugzilla)

Details

(Whiteboard: [PDT+])

Steps to reproduce: -open Address Book; -click New message; -enter in the "To" filed a first (or two) letters of the address that has NO e-mail address in his card; -hit enter //note: mozilla crashes (it doesn't happen with the names that do have an e-mail address) *******observed with 1999-10-27-09 windows build on NT40*******
QA Contact: lchiang → esther
Summary: Autocomplete against a name with no e-mail address leads to a crash → [DOGFOOD] Autocomplete against a name with no e-mail address leads to a crash
Nominate for dogfood
Whiteboard: [PDT+]
crasher is dogfood, autocomplete is not necessarily.
Assignee: hangas → ducarroz
JFD gets all the mail compose issues now.
Status: NEW → ASSIGNED
Target Milestone: M11
I am on it...
I get the fix, I am looking for a code review... Index: nsAbAutoCompleteSession.cpp =================================================================== RCS file: /cvsroot/mozilla/mailnews/addrbook/src/nsAbAutoCompleteSession.cpp,v retrieving revision 1.14 diff -r1.14 nsAbAutoCompleteSession.cpp 195,196d194 < matchFound = PR_TRUE; // so we kick out of the loop < 207a206,208 > > if (! fullAddress || ! *fullAddress) > continue; /* something goes wrong with this entry, maybe the email address is missing. Just skip it... */ 216a218,219 > > matchFound = PR_TRUE; // so we kick out of the loop
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
mscott revied my patch. Fixed and checked in.
Status: RESOLVED → VERIFIED
Using 19991028 build on win98, linux, and mac this is fixed. It looks like no match is found so it adds the domain. Verified.
Right, that what appends, entries without email address are ignored.
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.